==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/Nordic/tommRoCHwTemplateBusEnvironmentI2CMaster.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentI2CMaster.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/i2c/master/tommRoCHwTemplateBusCommonI2CMasterCb.h"
#include "bus/env/arm/Nordic/i2c/tommRoCHwTemplateBusI2CNordicHal.h"
#include "TOMMROCMwTemplate.h"
#include "nrfx_twi.h"
#include <stdbool.h>
#define __DEFAULT_FREQUENCY__           (NRF_TWI_FREQ_100K)
#define __DEFAULT_SCL_PIN_NUM__         (31)
#define __DEFAULT_SDA_PIN_NUM__         (31)
#define __EMPTY___tommRoC_hw_i2c_master_config_t____    \
{                                                       \
    /* .frequency */    __DEFAULT_FREQUENCY__,          \
    /* .sclPin */       __DEFAULT_SCL_PIN_NUM__,        \
    /* .sdaPin */       __DEFAULT_SDA_PIN_NUM__,        \
}
#define __EMPTY___nordic_callback_data_t____            \
{                                                       \
    /* .cbCalled */         false,                      \
    /* .transferResult */   NRFX_ERROR_INTERNAL,        \
}
#define __EMPTY___tommRoC_hw_i2c_master_handle_t____                    \
{                                                                       \
    /* .nrfxTwi */              NRFX_TWI_INSTANCE(0),                   \
    /* .nordicCallbackData */   __EMPTY___nordic_callback_data_t____,   \
}

static tommRoC_hw_err_enum_t _phy_write_buffers(
                void*                       const   i2cConfigPtr,
                void*                       const   i2cHandlePtr,
        const   uint8_t                             slaveAddress7Bit,
        const   tommRoC_hw_bus_write_buf_t* const   writeBuffersPtr,
        const   uint8_t                             writeBuffersAmount,
        const   uint32_t                            timeoutPerByteMsec) {

    const tommRoC_hw_bus_write_buf_t* writeBufferPtr;
    uint8_t index;

    TOMMROC_UTIL_UNUSED_PARAM(i2cConfigPtr);

    for (index = 0, writeBufferPtr = writeBuffersPtr; index < writeBuffersAmount; ++index, ++writeBufferPtr) {

        TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
                _i2c_master_write_transfer(
                        i2cHandlePtr,
                        slaveAddress7Bit,
                        writeBufferPtr->bufferPtr,
                        writeBufferPtr->toWriteAmount,
                        0,
                        timeoutPerByteMsec * tommRoCMathMax(1, writeBufferPtr->toWriteAmount)));
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _phy_read_buffers(
                void*                       const   i2cConfigPtr,
                void*                       const   i2cHandlePtr,
        const   uint8_t                             slaveAddress7Bit,
                tommRoC_hw_bus_read_buf_t*  const   readBuffersPtr,
        const   uint8_t                             readBuffersAmount,
        const   uint32_t                            timeoutPerByteMsec) {

    tommRoC_hw_bus_read_buf_t* readBufferPtr;
    uint8_t index;

    TOMMROC_UTIL_UNUSED_PARAM(i2cConfigPtr);

    for (index = 0, readBufferPtr = readBuffersPtr; index < readBuffersAmount; ++index, ++readBufferPtr) {

        TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
                _i2c_master_read_transfer(
                        i2cHandlePtr,
                        slaveAddress7Bit,
                        readBufferPtr->bufferPtr,
                        readBufferPtr->toReadAmount,
                        0,
                        timeoutPerByteMsec * tommRoCMathMax(1, readBufferPtr->toReadAmount)));

        *(readBufferPtr->readedAmountPtr) = readBufferPtr->toReadAmount;
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _phy_write_read_buffer(
                void*                       const   i2cConfigPtr,
                void*                       const   i2cHandlePtr,
        const   uint8_t                             slaveAddress7Bit,
        const   uint8_t*                    const   writeBufferPtr,
        const   uint16_t                            writeBufferLen,
                uint8_t*                    const   readBufferPtr,
        const   uint16_t                            toReadAmount,
        const   uint32_t                            delayWriteToReadMsec,
        const   uint32_t                            timeoutPerByteMsec) {

    TOMMROC_UTIL_UNUSED_PARAM(i2cConfigPtr);
    TOMMROC_UTIL_UNUSED_PARAM(delayWriteToReadMsec);

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
            _i2c_master_write_read_transfer(
                    i2cHandlePtr,
                    slaveAddress7Bit,
                    writeBufferPtr,
                    writeBufferLen,
                    readBufferPtr,
                    toReadAmount,
                    0,
                    timeoutPerByteMsec * tommRoCMathMax(1, writeBufferLen + toReadAmount)));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentI2CMaster0Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_i2c_nordic_hal_config_t halConfig;

    halConfig.nrfxTwi.p_twi         = NRF_TWI0;
    halConfig.nrfxTwi.drv_inst_idx  = NRFX_TWI0_INST_IDX;
    halConfig.frequency             = _i2c_master_config_0.frequency;
    halConfig.sclPin                = _i2c_master_config_0.sclPin;
    halConfig.sdaPin                = _i2c_master_config_0.sdaPin;
    halConfig.nrfxTwiEvtHandler     = _nrfx_twi0_evt_handler;

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusI2CNordicHalMasterInit(&halConfig));

    _i2c_master_I2C0_get_callback_ARM(cbFunctPtr);

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&_i2c_master_handle_0.nrfxTwi, &halConfig.nrfxTwi, sizeof(nrfx_twi_t)));

    return TOMMRO_C_HW_ERR_SUCCESS;
}
